@@ -1,3 +1,8 @@
+2006-02-13 [wwp]	2.0.0cvs46
+
+	* src/plugins/pgpcore/prefs_gpg.c
+		fixed sensitivity of radio widgets in account / GPG-plugin prefs.
+
 2006-02-12 [colin]	2.0.0cvs45
 
 	* src/folderview.c
